--- a/web/static/form2.html
+++ b/web/static/form2.html
@@ -13,19 +13,20 @@
 	  type="text/css" rel="Stylesheet" class="ui-dform"/>
 
     <script type="text/javascript" src="/jquery/jquery.js"></script>
-    <script type="text/javascript" src="/jquery/jquery.mruPulldown.js"
-    		></script>
+    <script type="text/javascript" src="/jquery/jquery.mruPulldown.js"></script>
     <script type="text/javascript" src="/jquery/jquery-ui.js"></script>
     <script type="text/javascript" src="/jquery/jquery.dbgpr.js"></script>
 
-    <script type="text/javascript" src="/jquery/dform.js"></script> 
-    <script type="text/javascript" src="/jquery/dform.converters.js"></script> 
-    <script type="text/javascript" src="/jquery/dform.extensions.js"></script> 
-    <script type="text/javascript" src="/jquery/dform.plugins.js"></script> 
-    <script type="text/javascript" src="/jquery/dform.subscribers.js"></script> 
 
-    <script type="text/javascript"
-	    src="/bin/form2.js"></script> 
+    <script type="text/javascript" src="/jquery/jquery.validate.js"></script> 
+    <script type="text/javascript" src="/jquery/dform.js"></script> 
+    <script type="text/javascript" src="/jquery/dform.extensions.js"></script> 
+    <script type="text/javascript" src="/jquery/dform.plugins.js"></script>
+    <script type="text/javascript" src="/jquery/dform.subscribers.js"></script>
+
+    <script type="text/javascript" src="/jquery/dform.wizard.js"></script> 
+
+    <script type="text/javascript" src="/bin/form2.js"></script> 
   </head>
 
   <body>
