--- a/mixer/test.html
+++ b/mixer/test.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="../web/jquery/jquery.checkbox.js"></script> 
 
     <script type="text/javascript" src="../web/jquery/jquery.dbgpr.js"></script>
+    <script type="text/javascript" src="clira.muxer.js"></script>
     <script type="text/javascript" src="test.js"></script>
 
 
@@ -19,9 +20,11 @@
 
     <p>Test</p>
 
-    <textarea id="sendmsg" type="textarea" cols="80" rows="5"
-    onChange="$.doSend()">#rpc target="alice" muxid="1"
-&lt;get-interface-information/&gt;
+    <p>New!!</p>
+
+    <label>Target:</label><input type="text" id="target"></input><br/>
+    <textarea id="message" type="textarea" cols="80" rows="5"
+    onChange="$.doSend()">&lt;get-interface-information/&gt;
 </textarea>
     <br/>
     <button onClick="$.doSend(false)">Send</button>
