checkpoint mixer code

--- a/mixer/test.html
+++ b/mixer/test.html
@@ -24,7 +24,7 @@
 
     <label>Target:</label><input type="text" id="target"></input><br/>
     <textarea id="message" type="textarea" cols="80" rows="5"
-    onChange="$.doSend()">&lt;get-interface-information/&gt;
+    >&lt;get-interface-information/&gt;
 </textarea>
     <br/>
     <button onClick="$.doSend(false)">Send</button>
