checkpoint mixer work

--- a/web/clira/clira.html
+++ b/web/clira/clira.html
@@ -1,5 +1,10 @@
+<!DOCTYPE html PUBLIC"-//W3C//DTD XHTML 1.0 Strict//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
   <head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
+
     <link rel="icon" href="/favicon.ico" type="image/png"/>
     <link rel="shortcut icon" href="/favicon.ico" type="image/png"/>
 
@@ -22,6 +27,7 @@
     <script type="text/javascript" src="/jquery/yform.js"></script> 
 
     <script type="text/javascript" src="/clira/clira.js"></script>
+    <script type="text/javascript" src="/clira/clira.muxer.js"></script>
 
 <!--
     <script type="text/javascript" src="/jquery/dform.js"></script> 
