add version check

--- a/web/clira/clira.html
+++ b/web/clira/clira.html
@@ -43,14 +43,11 @@
   <body>
 
     <div id="header">
-      <div id="header-logo">&nbsp;</div>
-      <div id="header-info" class="ui-widget ui-corner-all">
-	<div>User: phil</div>
-	<div>Status: running</div>
+      <div id="header-logo">
+	<button id="juise">juise</button>
       </div>
-
       <div id="header-actions">
-	<button id="prefs">Edit Preferences</button>
+	<button id="prefs">Preferences</button>
       </div>
 
       <div id="prefs-dialog" title="Preferences" style="display: none">
