checkpoint ubiquity checkin

--- a/web/ubiquity/playpen.xhtml
+++ b/web/ubiquity/playpen.xhtml
@@ -2,11 +2,11 @@
 <!DOCTYPE html [
   <!ENTITY % htmlDTD PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
     %htmlDTD;
-  <!ENTITY % directionDTD SYSTEM "chrome://global/locale/global.dtd">
+  <!ENTITY % directionDTD SYSTEM "locale/global.dtd">
     %directionDTD;
-  <!ENTITY % ubiquitydevDTD SYSTEM "chrome://ubiquity/locale/devubiquity.dtd">
+  <!ENTITY % ubiquitydevDTD SYSTEM "locale/devubiquity.dtd">
     %ubiquitydevDTD;
-  <!ENTITY % ubiquityinternalDTD SYSTEM "chrome://ubiquity/content/internal.dtd">
+  <!ENTITY % ubiquityinternalDTD SYSTEM "internal.dtd">
     %ubiquityinternalDTD;
 ]>
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -22,6 +22,11 @@
 
   <script type="text/javascript;version=1.8" src="jquery.js"></script>
   <script type="text/javascript;version=1.8" src="parser.js"></script>
+  <script type="text/javascript;version=1.8" src="utils.js"></script>
+  <script type="text/javascript;version=1.8" src="setup.js"></script>
+  <script type="text/javascript;version=1.8" src="localization_utils.js"></script>
+  <script type="text/javascript;version=1.8" src="msgservice.js"></script>
+
   <script type="text/javascript;version=1.8" src="playpen.js"></script>
 
 </head>
