checkpoint ubiquity checkin

--- a/web/ubiquity/playpen.xhtml
+++ b/web/ubiquity/playpen.xhtml
@@ -24,6 +24,8 @@
   <script type="text/javascript;version=1.8" src="parser.js"></script>
   <script type="text/javascript;version=1.8" src="utils.js"></script>
   <script type="text/javascript;version=1.8" src="setup.js"></script>
+  <script type="text/javascript;version=1.8" src="gettext.js"></script>
+
   <script type="text/javascript;version=1.8" src="localization_utils.js"></script>
   <script type="text/javascript;version=1.8" src="msgservice.js"></script>
 
