--- a/web/ubiquity/playpen.xhtml
+++ b/web/ubiquity/playpen.xhtml
@@ -23,6 +23,17 @@
   <script type="text/javascript;version=1.8" src="jquery.js"></script>
   <script type="text/javascript;version=1.8" src="parser.js"></script>
   <script type="text/javascript;version=1.8" src="utils.js"></script>
+  <script type="text/javascript;version=1.8" src="eventhub.js"></script>
+
+  <script type="text/javascript;version=1.8" src="feedmanager.js"></script>
+  <script type="text/javascript;version=1.8" src="default_feed_plugin.js"></script>
+  <script type="text/javascript;version=1.8" src="annotation_memory.js"></script>
+  <script type="text/javascript;version=1.8" src="suggestion_memory.js"></script>
+  <script type="text/javascript;version=1.8" src="feedaggregator.js"></script>
+  <script type="text/javascript;version=1.8" src="webjsm.js"></script>
+  <script type="text/javascript;version=1.8" src="prefcommands.js"></script>
+  <script type="text/javascript;version=1.8" src="skin_feed_plugin.js"></script>
+
   <script type="text/javascript;version=1.8" src="setup.js"></script>
   <script type="text/javascript;version=1.8" src="gettext.js"></script>
 
