checkpoint ubiquity checkin

--- a/web/ubiquity/playpen.xhtml
+++ b/web/ubiquity/playpen.xhtml
@@ -24,20 +24,23 @@
   <script type="text/javascript;version=1.8" src="parser.js"></script>
   <script type="text/javascript;version=1.8" src="utils.js"></script>
   <script type="text/javascript;version=1.8" src="eventhub.js"></script>
-
+  <script type="text/javascript;version=1.8" src="localization_utils.js"></script>
   <script type="text/javascript;version=1.8" src="feedmanager.js"></script>
+  <script type="text/javascript;version=1.8" src="xml_script_commands_parser.js"></script>
+  <script type="text/javascript;version=1.8" src="codesource.js"></script>
+  <script type="text/javascript;version=1.8" src="sandboxfactory.js"></script>
+  <script type="text/javascript;version=1.8" src="feed_plugin_utils.js"></script>
   <script type="text/javascript;version=1.8" src="default_feed_plugin.js"></script>
   <script type="text/javascript;version=1.8" src="annotation_memory.js"></script>
+  <script type="text/javascript;version=1.8" src="dbutils.js"></script>
   <script type="text/javascript;version=1.8" src="suggestion_memory.js"></script>
   <script type="text/javascript;version=1.8" src="feedaggregator.js"></script>
   <script type="text/javascript;version=1.8" src="webjsm.js"></script>
+  <script type="text/javascript;version=1.8" src="ubiquity_protocol.js"></script>
   <script type="text/javascript;version=1.8" src="prefcommands.js"></script>
   <script type="text/javascript;version=1.8" src="skin_feed_plugin.js"></script>
-
   <script type="text/javascript;version=1.8" src="setup.js"></script>
   <script type="text/javascript;version=1.8" src="gettext.js"></script>
-
-  <script type="text/javascript;version=1.8" src="localization_utils.js"></script>
   <script type="text/javascript;version=1.8" src="msgservice.js"></script>
 
   <script type="text/javascript;version=1.8" src="playpen.js"></script>
