checkpoint ubiquity checkin

--- a/web/ubiquity/playpen.xhtml
+++ b/web/ubiquity/playpen.xhtml
@@ -21,6 +21,8 @@
   <link rel="icon" type="image/x-icon" id="favicon" href="chrome://ubiquity/skin/icons/favicon.ico" />
 
   <script type="text/javascript;version=1.8" src="jquery.js"></script>
+  <script type="text/javascript;version=1.8" src="ubclira.js"></script>
+
   <script type="text/javascript;version=1.8" src="parser.js"></script>
   <script type="text/javascript;version=1.8" src="utils.js"></script>
   <script type="text/javascript;version=1.8" src="eventhub.js"></script>
