--- a/web/ubiquity/playpen.xhtml
+++ b/web/ubiquity/playpen.xhtml
@@ -21,6 +21,7 @@
   <link rel="icon" type="image/x-icon" id="favicon" href="chrome://ubiquity/skin/icons/favicon.ico" />
 
   <script type="text/javascript;version=1.8" src="jquery.js"></script>
+  <script type="text/javascript;version=1.8" src="../jquery/jquery.dbgpr.js"></script>
   <script type="text/javascript;version=1.8" src="ubclira.js"></script>
 
   <script type="text/javascript;version=1.8" src="parser.js"></script>
@@ -41,10 +42,13 @@
   <script type="text/javascript;version=1.8" src="webjsm.js"></script>
   <script type="text/javascript;version=1.8" src="ubiquity_protocol.js"></script>
   <script type="text/javascript;version=1.8" src="prefcommands.js"></script>
+<!--
   <script type="text/javascript;version=1.8" src="skin_feed_plugin.js"></script>
+-->
   <script type="text/javascript;version=1.8" src="setup.js"></script>
   <script type="text/javascript;version=1.8" src="msgservice.js"></script>
 
+  <script type="text/javascript;version=1.8" src="en-parser.js"></script>
   <script type="text/javascript;version=1.8" src="playpen.js"></script>
 
 </head>
