checkpoint web work

--- a/web/ubiquity/playpen.xhtml
+++ b/web/ubiquity/playpen.xhtml
@@ -47,6 +47,8 @@
 -->
   <script type="text/javascript;version=1.8" src="setup.js"></script>
   <script type="text/javascript;version=1.8" src="msgservice.js"></script>
+  <script type="text/javascript;version=1.8" src="nounutils.js"></script>
+  <script type="text/javascript;version=1.8" src="nountypes.js"></script>
 
   <script type="text/javascript;version=1.8" src="en-parser.js"></script>
   <script type="text/javascript;version=1.8" src="playpen.js"></script>
