checkpoint web work

--- a/web/ubiquity/playpen.xhtml
+++ b/web/ubiquity/playpen.xhtml
@@ -24,8 +24,9 @@
   <script type="text/javascript;version=1.8" src="../jquery/jquery.dbgpr.js"></script>
   <script type="text/javascript;version=1.8" src="ubclira.js"></script>
 
-  <script type="text/javascript;version=1.8" src="parser.js"></script>
   <script type="text/javascript;version=1.8" src="utils.js"></script>
+  <script type="text/javascript;version=1.8" src="contextutils.js"></script>
+  <script type="text/javascript;version=1.8" src="parser.js"></script>
   <script type="text/javascript;version=1.8" src="eventhub.js"></script>
   <script type="text/javascript;version=1.8" src="gettext.js"></script>
   <script type="text/javascript;version=1.8" src="localization_utils.js"></script>
@@ -45,9 +46,11 @@
 <!--
   <script type="text/javascript;version=1.8" src="skin_feed_plugin.js"></script>
 -->
-  <script type="text/javascript;version=1.8" src="setup.js"></script>
+  <script type="text/javascript;version=1.8" src="cmdmanager.js"></script>
   <script type="text/javascript;version=1.8" src="msgservice.js"></script>
+  <script type="text/javascript;version=1.8" src="setup.js"></script>
   <script type="text/javascript;version=1.8" src="nounutils.js"></script>
+  <script type="text/javascript;version=1.8" src="cmdutils.js"></script>
   <script type="text/javascript;version=1.8" src="nountypes.js"></script>
 
   <script type="text/javascript;version=1.8" src="en-parser.js"></script>
@@ -145,5 +148,8 @@ should work. Otherwise, there may actually be a problem with some code.</div>
   <div id="parsetree"></div>
 
 </div>
+
+<div id="debug-log">&nbsp;</div>
+
 </body>
 </html>
