checkpoint web work

--- a/web/ubiquity/playpen.xhtml
+++ b/web/ubiquity/playpen.xhtml
@@ -53,6 +53,8 @@
   <script type="text/javascript;version=1.8" src="cmdutils.js"></script>
   <script type="text/javascript;version=1.8" src="nountypes.js"></script>
 
+  <script type="text/javascript;version=1.8" src="parser_registry.js"></script>
+  <script type="text/javascript;version=1.8" src="namespace.js"></script>
   <script type="text/javascript;version=1.8" src="en-parser.js"></script>
   <script type="text/javascript;version=1.8" src="playpen.js"></script>
 
