checkpoint web work

--- a/web/ubiquity/playpen.xhtml
+++ b/web/ubiquity/playpen.xhtml
@@ -20,7 +20,7 @@
   <link rel="stylesheet" type="text/css" media="all" href="playpen.css" />
   <link rel="icon" type="image/x-icon" id="favicon" href="chrome://ubiquity/skin/icons/favicon.ico" />
 
-  <script type="text/javascript;version=1.8" src="jquery.js"></script>
+  <script type="text/javascript;version=1.8" src="../jquery/jquery.js"></script>
   <script type="text/javascript;version=1.8" src="../jquery/jquery.dbgpr.js"></script>
   <script type="text/javascript;version=1.8" src="ubclira.js"></script>
 
