* Remove accidentally left in debugging database inserts * Add jqgrid css to parser-test * Fix groups db query

--- a/web/clira/parser-test.html
+++ b/web/clira/parser-test.html
@@ -16,6 +16,8 @@
 	  type="text/css" rel="Stylesheet" class="ui-main"/>
     <link href="/themes/black-tie/addons-black-tie.css"
 	  type="text/css" rel="Stylesheet" class="ui-addon"/>
+    
+    <link href="/jquery/jqgrid/ui.jqgrid.css" type="text/css" rel="Stylesheet"/>
 
     <script type="text/javascript" src="/jquery/jquery.js"></script>
     <script type="text/javascript" src="/jquery/jquery.mruPulldown.js"
