add target list for "on"

--- a/web/clira/parser-test.html
+++ b/web/clira/parser-test.html
@@ -84,6 +84,12 @@
     </div>
 
     <div id="input-top">
+      <div id="target-list">
+	<div id="target-title">Recent Targets:</div>
+	<div id="target-contents-none">None</div>
+	<div id="target-contents"></div>
+      </div>
+
       <div id="command-top">
 	<div id="command-history" style="display: none"
 	     class="history command-value">
