Dynamically load clira command files. There are now three types of commands: - builtin: not dynamically loaded; very few - system: defined by CLIRA (us) - local: defined (or downloaded) by user
Should be functional but needs features like script pre-req /
dependencies: the command file should be able to list dependencies.

--- a/web/clira/parser-test.html
+++ b/web/clira/parser-test.html
@@ -28,6 +28,11 @@
     <script type="text/javascript" src="/jquery/jquery.dbgpr.js"></script>
     <script type="text/javascript" src="/jquery/yform.js"></script> 
 
+    <script type="text/javascript"
+	    src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
+    <script type="text/javascript"
+	    src="/external/gmaps.js"></script>
+
     <script type="text/javascript" src="/clira/clira.js"></script>
     <script type="text/javascript" src="/clira/clira.prefs.js"></script>
     <script type="text/javascript" src="/clira/clira.muxer.js"></script>
@@ -47,6 +52,9 @@
     <script type="text/javascript" src="/clira/parser.js"></script>
     <script type="text/javascript" src="/clira/parser.types.js"></script>
     <script type="text/javascript" src="/clira/parser.test.js"></script>
+    <script type="text/javascript" src="/clira/builtins.js"></script>
+
+    <script type="text/javascript" id="last"></script>
 
   </head>
 
