--- a/web/clira/parser-test.html
+++ b/web/clira/parser-test.html
@@ -8,46 +8,29 @@
     <link rel="icon" href="/favicon.ico" type="image/png"/>
     <link rel="shortcut icon" href="/favicon.ico" type="image/png"/>
 
-    <link href="/themes/black-tie/jquery-ui-black-tie.css"
-	  type="text/css" rel="Stylesheet" class="ui-theme"/>
-    <link href="/jquery/jquery.checkbox.css"
-	  type="text/css" rel="Stylesheet" class="ui-checkbox"/>
-    <link href="/clira/clira.css"
-	  type="text/css" rel="Stylesheet" class="ui-main"/>
-    <link href="/themes/black-tie/addons-black-tie.css"
-	  type="text/css" rel="Stylesheet" class="ui-addon"/>
+    <link href="/themes/black-tie/jquery-ui-black-tie.css" type="text/css" rel="Stylesheet" class="ui-theme"/>
+    <link href="/external/jquery-checkbox/jquery.checkbox.css" type="text/css" rel="Stylesheet" class="ui-checkbox"/>
+    <link href="/clira/clira.css" type="text/css" rel="Stylesheet" class="ui-main"/>
+    <link href="/themes/black-tie/addons-black-tie.css" type="text/css" rel="Stylesheet" class="ui-addon"/>
     
-    <link href="/jquery/jqgrid/ui.jqgrid.css" type="text/css" rel="Stylesheet"/>
+    <link href="/external/jqgrid/ui.jqgrid.css" type="text/css" rel="Stylesheet"/>
 
-    <script type="text/javascript" src="/jquery/jquery.js"></script>
-    <script type="text/javascript" src="/jquery/jquery.mruPulldown.js"
-    		></script>
-    <script type="text/javascript" src="/jquery/jquery-ui.js"></script>
-    <script type="text/javascript" src="/jquery/jquery.checkbox.js"></script> 
+    <script type="text/javascript" src="/external/jquery/jquery.js"></script>
+    <script type="text/javascript" src="/jquery/jquery.mruPulldown.js" ></script>
+    <script type="text/javascript" src="/external/jquery-ui/jquery-ui.js"></script>
+    <script type="text/javascript" src="/external/jquery-checkbox/jquery.checkbox.js"></script> 
 
     <script type="text/javascript" src="/jquery/jquery.dbgpr.js"></script>
     <script type="text/javascript" src="/jquery/yform.js"></script> 
 
-    <script type="text/javascript"
-	    src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
-    <script type="text/javascript"
-	    src="/external/gmaps.js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
+    <script type="text/javascript" src="/external/gmaps/gmaps.js"></script>
 
     <script type="text/javascript" src="/clira/clira.js"></script>
     <script type="text/javascript" src="/clira/clira.prefs.js"></script>
     <script type="text/javascript" src="/clira/clira.muxer.js"></script>
-    <script type="text/javascript" src="/jquery/jqgrid/grid.locale-en.js"></script>
-    <script type="text/javascript" src="/jquery/jqgrid/jquery.jqGrid.src.js"></script>
-
-
-<!--
-    <script type="text/javascript" src="/jquery/dform.js"></script> 
-    <script type="text/javascript" src="/jquery/dform.converters.js"></script> 
-    <script type="text/javascript" src="/jquery/dform.extensions.js"></script> 
-    <script type="text/javascript" src="/jquery/dform.plugins.js"></script> 
-    <script type="text/javascript" src="/jquery/dform.subscribers.js"></script> 
-    <script type="text/javascript" src="/jquery/dform.wizard.js"></script> 
--->
+    <script type="text/javascript" src="/external/jqgrid/grid.locale-en.js"></script>
+    <script type="text/javascript" src="/external/jqgrid/jquery.jqGrid.src.js"></script>
 
     <script type="text/javascript" src="/clira/parser.js"></script>
     <script type="text/javascript" src="/clira/parser.types.js"></script>
@@ -55,7 +38,6 @@
     <script type="text/javascript" src="/clira/builtins.js"></script>
 
     <script type="text/javascript" id="last"></script>
-
   </head>
 
   <body>
