Starting moving to handlebars.  Resurrect logo

--- a/web/clira/parser-test.html
+++ b/web/clira/parser-test.html
@@ -52,6 +52,8 @@
     <script type="text/javascript" src="/clira/parser.js"></script>
     <script type="text/javascript" src="/clira/parser.types.js"></script>
     <script type="text/javascript" src="/clira/parser.test.js"></script>
+
+    <script type="text/javascript" src="/external/handlebars/handlebars.js"></script>
     <script type="text/javascript" src="/clira/builtins.js"></script>
 
     <script type="text/javascript" id="last-script-in-header"></script>
@@ -60,6 +62,7 @@
 
   <body>
     <div id="header">
+       <div id="header-logo"></div>
       <div id="prefsbtn"></div>
       
       <div id="prefs-main-form" title="Preferences">
