Undo mistaken removal of parser.test.js

--- a/web/clira/parser-test.html
+++ b/web/clira/parser-test.html
@@ -54,6 +54,7 @@
 
     <script type="text/javascript" src="/external/handlebars/handlebars.js"></script>
     <script type="text/javascript" src="/clira/builtins.js"></script>
+    <script type="text/javascript" src="/clira/parser.test.js"></script>
 
     <script type="text/javascript" id="last-script-in-header"></script>
 
