Use clira icon as favicon

--- a/web/clira/parser-test.html
+++ b/web/clira/parser-test.html
@@ -6,8 +6,7 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
 
-    <link rel="icon" href="/favicon.ico" type="image/png"/>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/png"/>
+    <link rel="shortcut icon" href="/images/clira_icon.png" type="image/png"/>
 
     <link href="/themes/clira/jquery-ui-clira.css" type="text/css" rel="Stylesheet" class="ui-theme"/>
     <link href="/external/jquery-checkbox/jquery.checkbox.css" type="text/css" rel="Stylesheet" class="ui-checkbox"/>
