Adding commands to enable/disable, pause/resume debugging and some styling to debug container

--- a/web/clira/parser-test.html
+++ b/web/clira/parser-test.html
@@ -112,7 +112,7 @@
 
     <div id="output-top"></div>
 
-    <div id="debug-container" class="ui-widget ui-corner-all" style="display:none">
+    <div id="debug-container" class="ui-widget ui-corner-all">
       <div class="ui-state-default ui-widget-header ui-corner-all">
 	    <button class="icon-remove-section"></button>
 	    <button class="icon-hide-section"></button>
