--- a/juise-manual.html
+++ b/juise-manual.html
@@ -497,7 +497,7 @@ li.indline1 {
  
   } 
   @top-right {
-       content: "June 2013";
+       content: "July 2013";
  
   } 
   @top-center {
@@ -21816,6 +21816,8 @@ jQuery(function ($) {
                 var $found = $(this.URL.substring(last));
                 if ($found.length > 0)
                     $active = $found.parent();
+                    if (!$active.hasClass("content"))
+                        $active = $active.parent();
             }
         }
         setActive($active);
@@ -21973,7 +21975,7 @@ jQuery(function ($) {
 </tr>
 <tr>
 <td class="header left"></td>
-<td class="header right">June 14, 2013</td>
+<td class="header right">July 4, 2013</td>
 </tr>
 </table></div>
 <p id="title" class="title">The JUISE Project: JUNOS User Interface Scripting Environment<br><span class="filename">juise-manual</span></p>
@@ -22751,11 +22753,11 @@ jQuery(function ($) {
 <div class="self-section-number">
 <a href="#doc_section_11">11_</a> </div>Extension Libraries for juise</h1>
 <p id="doc_section_11_p_1">The JUISE project includes the jcs extension library which allows invocation of NETCONF RPCs. This library is identical to the jcs library available under JUNOS. This section details the extension functions and element of those libraries.</p>
-<div class="digress tooltip note:" id="idp18407712"><table class="tooltip" cellpadding="0" cellspacing="0" id="table-idp18407712">
+<div class="digress tooltip note:" id="idp17509648"><table class="tooltip" cellpadding="0" cellspacing="0" id="table-idp17509648">
 <tr><td><div class="fancy-tooltip-header">note:: </div></td></tr>
 <tr><td><div class="fancy-tooltip-body"> <p>The jcs extension library is not a dynamic extension library and is only available when using the juise command. This needs to change, but is low priority.</p> </div></td></tr>
 </table></div>
-<a href="?" tabindex="9999" class="digress-anchor" onClick="return popClick(event, 'idp18407712'); " onmouseover="popUp(event, 'idp18407712')" onmouseout="popDown(event, 'idp18407712')"><span class="digress digress-anchor">[note:]</span></a><div class="content">
+<a href="?" tabindex="9999" class="digress-anchor" onClick="return popClick(event, 'idp17509648'); " onmouseover="popUp(event, 'idp17509648')" onmouseout="popDown(event, 'idp17509648')"><span class="digress digress-anchor">[note:]</span></a><div class="content">
 <h2 id="doc_section_11_1">
 <div class="self-section-number">
 <a href="#doc_section_11_1">11.1</a> </div>jcs</h2>
